update 'getCacheEntries' method impl.